# pet_project_earthquake

./: .gitignore  LICENSE  README.md  cred.example.py  docker-compose.yaml  pyproject.toml
dags/: raw_api_to_s3.py
