[tool.poetry]
package-mode = false

[project]
name = "pet-project-earthquake"
version = "0.1.0"
description = ""
authors = [
    {name = "Almaz S.",email = "dok.hok@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow (==2.10.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
